Update to JDK11, sync with internal updates